1999-02-06  Sven Radej <radej@kde.org> (KMail-1.0.17)

        * Server-client method - no more locking problems, lost instead
          of sent mail, ghost messages...
          Do the right thing when sending to "me@there (John Doe)"
          Waldo's folderless-acount-segv-fix
          More against destroyed last char in message
          Better long/normal folder-list geometry bugfix
          Don't quit while sending, and show a label while you send.
        
1999-02-03  Sven Radej <radej@kde.org> (KMail-1.0.16)

	* Bugfix:  possible segv-on-create-folder. Reciever is properly
          shown (index design & version updated) in sent&queued mail.
	  Fix agains overwriting last char in last message when appending 
          new one to folder.

1999-01-30  Stefan Taferner  <taferner@kde.org> (KMail-1.0.16)

	* Removed obsolete / commented-out code.

	* Bugfix: KMail now properly handles the 'filename' attribute
	of message parts in the reader.

1999-01-29  Stefan Taferner  <taferner@kde.org> (KMail-1.0.15)

	* Bugfix: disabled deleting of system folders.

	* Removed save button in composer which is still not
	implemented ;->

	* Bugfix: disabled renaming of system folders (inbox, outbox,
	sent-mails, trash).

	* Fix: improved performance when displaying messages (Bug #148).
	
	* Bugfix: fixed crash when dropping message on directory
	entry in folder list.

	* Improved: email completion of composer (Ctrl-t) now
	searches for appearance of given characters in addressbook's
	list. Up to now only used beginning of string.

	* Added missing i18n() around "Spellcheck complete" in
	composer.

	* Bugfix: Added %_ in composer settings, e.g. for indentation 
	template, to add a space at the end. Added %f which expands
	to the two first characters of the name in the email address.

	* Bugfix: Indentation template (see composer settings) now 
	supports the same wildcards as the other fields, e.g. "%f>%_"

1999-01-28  Stefan Taferner  <taferner@kde.org>
