@@ -1,6 +1,7 @@
 
 data_DATA = logotp3.gif index.html index-1.html index-2.html index-3.html \
-	index-4.html index-5.html index-6.html index.html
+	index-4.html index-5.html index-6.html index-7.html index-8.html \
+	index.html
 
 datadir = $(kde_htmldir)/en/kmail
 
