@@ -1,0 +1,51 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<HTML>
+<HEAD>
+<TITLE>The Kmail Handbook: Questions and answers</TITLE>
+<LINK HREF="index-8.html" REL=next>
+<LINK HREF="index-6.html" REL=previous>
+<LINK HREF="index.html#toc7" REL=contents>
+</HEAD>
+<BODY>
+<A HREF="index-8.html">Next</A>
+<A HREF="index-6.html">Previous</A>
+<A HREF="index.html#toc7">Contents</A>
+<HR>
+<H2><A NAME="s7">7. Questions and answers</A></H2>
+
+<H2><A NAME="ss7.1">7.1 How do I use my (Eudora, XFmail, other random mail client) mailboxes in Kmail?</A>
+</H2>
+
+<P>See the section 
+<A HREF="index-5.html#sec-Importing">Using other Mailbox files With Kmail</A>.
+<P>
+<H2><A NAME="ss7.2">7.2 How do I leave mail on the server? (from the KDE FAQ)</A>
+</H2>
+
+<P>Open up the Settings window from the file menu. Click on the Network tab. Select your account from the account list and click the
+Modify button. This dialog contains the "Delete mail from server" setting which you must not select. 
+<P>
+<H2><A NAME="ss7.3">7.3 How do I automatically insert a text footer within the mail? (from the KDE FAQ)</A>
+</H2>
+
+<P>The text footer is called a signature file. What you need to do is open up a text editor (like kedit) and type in what you want to appear
+in the footer. Save the file under a name like signature or footer. Go into Kmail and select <B>File |
+Settings...</B> Look in the "Identity" tab
+for the "signature file" field. Click on the ellipses button and select the file you just created. 
+Now Kmail will automatically insert that file in any message you write. 
+<P>
+<H2><A NAME="ss7.4">7.4 Why doesn't word wrap work in the Composer window?</A>
+</H2>
+
+<P>The word wrap setting is probably turned off. Word wrap can be toggled on and off in the 
+<B>Composer</B> tab of the <B>Settings</B> dialog box.
+<P>
+<P>
+<P>
+<P>
+<HR>
+<A HREF="index-8.html">Next</A>
+<A HREF="index-6.html">Previous</A>
+<A HREF="index.html#toc7">Contents</A>
+</BODY>
+</HTML>
