@@ -1,0 +1,48 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<HTML>
+<HEAD>
+<TITLE>The Kmail Handbook: Epilogue</TITLE>
+<LINK HREF="index-7.html" REL=previous>
+<LINK HREF="index.html#toc8" REL=contents>
+</HEAD>
+<BODY>
+Next
+<A HREF="index-7.html">Previous</A>
+<A HREF="index.html#toc8">Contents</A>
+<HR>
+<H2><A NAME="s8">8. Epilogue</A></H2>
+
+<P>
+<P>
+<H2><A NAME="sec-Developers"></A> <A NAME="ss8.1">8.1 Developers</A>
+</H2>
+
+<P>Stefan Taferner 
+<A HREF="mailto:taferner@alpin.or.at">&lt;taferner@alpin.or.at&gt;</A><P>Markus Wuebben 
+<A HREF="mailto:markus.wuebben@kde.org">&lt;markus.wuebben@kde.org&gt;</A><P>
+<P><B>Based on the work of:</B>
+<P>
+<P>Lynx 
+<A HREF="mailto:lynx@topaz.hknet.com">&lt;lynx@topaz.hknet.com&gt;</A><P>
+<P>Stephen Meyer 
+<A HREF="mailto:Stephan.Meyer@pobox.com">&lt;Stephan.Meyer@pobox.com&gt;</A><P>
+<P>
+<H2><A NAME="ss8.2">8.2 Documentation</A>
+</H2>
+
+<P>
+<P>David Rugge 
+<A HREF="mailto:davidrugge@mindspring.com">&lt;davidrugge@mindspring.com&gt;</A><P>Markus Wuebben 
+<A HREF="mailto:markus.wuebben@kde.org">&lt;markus.wuebben@kde.org&gt;</A><P>Robert Williams - Editor 
+<A HREF="mailto:rwilliams@kde.org">&lt;rwilliams@kde.org&gt;</A><P>Some of the Kmail Questions and Answers were taken from the Kmail section of the
+KDE FAQ. 
+<P>Thanks to Michael Elkins 
+<A HREF="mailto:me@cs.hmc.edu">&lt;me@cs.hmc.edu&gt;</A> for his
+excellent description of the different Unix mail formats in the Mutt documentation.
+<P>
+<HR>
+Next
+<A HREF="index-7.html">Previous</A>
+<A HREF="index.html#toc8">Contents</A>
+</BODY>
+</HTML>
