@@ -1,3 +1,7 @@
+1999-02-06  Stefan Taferner  <taferner@kde.org> (KMail-1.1.0)
+
+	* Added missing parts of documentation for proper install.
+
 1999-02-06  Sven Radej <radej@kde.org> (KMail-1.0.17)
 
         * Server-client method - no more locking problems, lost instead
@@ -20,7 +24,7 @@
 	* Removed obsolete / commented-out code.
 
 	* Bugfix: KMail now properly handles the 'filename' attribute
-	of message parts in the reader.
+	of message parts in the reader (Bug #445).
 
 1999-01-29  Stefan Taferner  <taferner@kde.org> (KMail-1.0.15)
 
